Make eye tracking compatible with Mouth Tracking

--- a/ResoniteBaballoniaEyeTracking.csproj
+++ b/ResoniteBaballoniaEyeTracking.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AppName>Resonite</AppName>
@@ -8,11 +8,12 @@
     <AppPath>$(MSBuildThisFileDirectory)$(AppName)</AppPath>
     <AppPath Condition="Exists('C:\Program Files (x86)\Steam\steamapps\common\$(AppName)\')">C:\Program Files (x86)\Steam\steamapps\common\$(AppName)\</AppPath>
     <AppPath Condition="Exists('$(HOME)/.steam/steam/steamapps/common/$(AppName)/')">$(HOME)/.steam/steam/steamapps/common/$(AppName)/</AppPath>
+	  <AppPath Condition="Exists('D:/SteamLibrary/steamapps/common/$(AppName)/')">D:/SteamLibrary/steamapps/common/$(AppName)/</AppPath>
     <CopyLocal>false</CopyLocal>
     <CopyToMods Condition="'$(CopyToMods)'==''">true</CopyToMods>
     <DebugSymbols Condition="'$(Configuration)'=='Release'">false</DebugSymbols>
     <DebugType Condition="'$(Configuration)'=='Release'">None</DebugType>
-    <Version>0.1.1</Version>
+    <Version>0.1.2</Version>
     <Authors>hantabaru1014</Authors>
   </PropertyGroup>
 
@@ -29,6 +30,9 @@
     </Reference>
     <Reference Include="Rug.Osc">
       <HintPath>$(AppPath)\Rug.Osc.dll</HintPath>
+    </Reference>
+  <Reference Include="0Harmony.Lib">
+      <HintPath>$(AppPath)\rml_libs\0Harmony.dll</HintPath>
     </Reference>
   </ItemGroup>
 
